testing fix on mobile phone

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -255,7 +255,7 @@ h3 {
 		float: left;
 		padding-top: 0px;
 		padding-right: 0px;
-		margin-left: 20px;
+		margin-left: 13px;
 		margin-top: 20px;
 		margin-bottom: 10px;
 		width: 376px;
